== 2.7.8 ==
Release date: July 11, 2023
* Enhancement: WP Forms - Updated labels text color selector
* Enhancement: Removed CSS & JS related to slick slider

== 2.7.7 ==
Release date: June 21, 2023
* Enhancement: WP Forms - Added page break style options
* Enhancement: Disabled AI support for irrelevant controls
* Fixed: Compatibility issues with Elementor 3.14.0
* Fixed: Content Ticker - Position of arrows

== 2.7.6 ==
Release date: May 29, 2023
* Enhancement: Content Reveal - Added Default State option to show revealed content on page load
* Enhancement: Content Reveal - Reveal button hides when number of lines of content is less than the visible lines set in the settings
* Enhancement: Image Accordion - Added option to disable body click action
* Fixed: Logo Carousel - Arrows style options were not working

== 2.7.5 ==
Release date: May 2, 2023
* Enhancement: Added compatibility for Swiper v8.45
* Fixed: Info Grid & Carousel - Equal height option
* Fixed: Content Reveal - Compatibility with WPML
* Fixed: Editor - PowerPack add template button icon issue

== 2.7.4 ==
Release date: March 29, 2023
* Enhancement: Advanced Posts - Added option to automatically align buttons
* Enhancement: Added compatibility for Swiper v8.45
* Enhancement: Updated Elementor compatibility tags
* Fixed: Info Grid & Carousel - Columns issue in Grid layout

== 2.7.3 ==
Release date: February 8, 2023
* Enhancement: Logo Carousel - Added direction option
* Enhancement: Logo Carousel - Repeater items now show logo title instead of Logo Image text
* Enhancement: Team Member Carousel - Added support for Xing icon
* Fixed: Twitter Tweet - Widget stopped working after Twitter API update
* Fixed: Twitter Timeline - Widget stopped working after Twitter API update

== 2.7.2 ==
Release date: January 18, 2023
* Fixed: Compatibility issues with Elementor 3.10.0
* Enhancement: Team Member Carousel - Added Links Target option

== 2.7.1 ==
Release date: December 9, 2022