@@ -2434,7 +2434,7 @@ class Team_Member_Carousel extends Powerpack_Widget {
 				),
 				'size_units' => array( 'px' ),
 				'selectors'  => array(
-					'{{WRAPPER}} .swiper-container-wrap .swiper-button-next, {{WRAPPER}} .swiper-container-wrap .swiper-button-prev' => 'font-size: {{SIZE}}{{UNIT}};',
+					'{{WRAPPER}} .elementor-swiper-button-next, {{WRAPPER}} .elementor-swiper-button-prev' => 'font-size: {{SIZE}}{{UNIT}};',
 				),
 			)
 		);
@@ -2453,7 +2453,7 @@ class Team_Member_Carousel extends Powerpack_Widget {
 				),
 				'size_units' => array( 'px' ),
 				'selectors'  => array(
-					'{{WRAPPER}} .swiper-container-wrap .swiper-button-prev' => 'left: {{SIZE}}{{UNIT}};',
+					'{{WRAPPER}} .elementor-swiper-button-prev' => 'left: {{SIZE}}{{UNIT}};',
 				),
 			)
 		);
@@ -2472,7 +2472,7 @@ class Team_Member_Carousel extends Powerpack_Widget {
 				),
 				'size_units' => array( 'px' ),
 				'selectors'  => array(
-					'{{WRAPPER}} .swiper-container-wrap .swiper-button-next' => 'right: {{SIZE}}{{UNIT}};',
+					'{{WRAPPER}} .elementor-swiper-button-next' => 'right: {{SIZE}}{{UNIT}};',
 				),
 			)
 		);
@@ -2493,7 +2493,7 @@ class Team_Member_Carousel extends Powerpack_Widget {
 				'type'      => Controls_Manager::COLOR,
 				'default'   => '',
 				'selectors' => array(
-					'{{WRAPPER}} .swiper-container-wrap .swiper-button-next, {{WRAPPER}} .swiper-container-wrap .swiper-button-prev' => 'background-color: {{VALUE}};',
+					'{{WRAPPER}} .elementor-swiper-button-next, {{WRAPPER}} .elementor-swiper-button-prev' => 'background-color: {{VALUE}};',
 				),
 			)
 		);
@@ -2505,7 +2505,7 @@ class Team_Member_Carousel extends Powerpack_Widget {
 				'type'      => Controls_Manager::COLOR,
 				'default'   => '',
 				'selectors' => array(
-					'{{WRAPPER}} .swiper-container-wrap .swiper-button-next, {{WRAPPER}} .swiper-container-wrap .swiper-button-prev' => 'color: {{VALUE}};',
+					'{{WRAPPER}} .elementor-swiper-button-next, {{WRAPPER}} .elementor-swiper-button-prev' => 'color: {{VALUE}};',
 				),
 			)
 		);
@@ -2517,7 +2517,7 @@ class Team_Member_Carousel extends Powerpack_Widget {
 				'label'       => __( 'Border', 'powerpack' ),
 				'placeholder' => '1px',
 				'default'     => '1px',
-				'selector'    => '{{WRAPPER}} .swiper-container-wrap .swiper-button-next, {{WRAPPER}} .swiper-container-wrap .swiper-button-prev',
+				'selector'    => '{{WRAPPER}} .elementor-swiper-button-next, {{WRAPPER}} .elementor-swiper-button-prev',
 				'separator'   => 'before',
 			)
 		);
@@ -2529,7 +2529,7 @@ class Team_Member_Carousel extends Powerpack_Widget {
 				'type'       => Controls_Manager::DIMENSIONS,
 				'size_units' => array( 'px', '%', 'em' ),
 				'selectors'  => array(
-					'{{WRAPPER}} .swiper-container-wrap .swiper-button-next, {{WRAPPER}} .swiper-container-wrap .swiper-button-prev' => 'border-radius: {{TOP}}{{UNIT}} {{RIGHT}}{{UNIT}} {{BOTTOM}}{{UNIT}} {{LEFT}}{{UNIT}};',
+					'{{WRAPPER}} .elementor-swiper-button-next, {{WRAPPER}} .elementor-swiper-button-prev' => 'border-radius: {{TOP}}{{UNIT}} {{RIGHT}}{{UNIT}} {{BOTTOM}}{{UNIT}} {{LEFT}}{{UNIT}};',
 				),
 			)
 		);
@@ -2550,7 +2550,7 @@ class Team_Member_Carousel extends Powerpack_Widget {
 				'type'      => Controls_Manager::COLOR,
 				'default'   => '',
 				'selectors' => array(
-					'{{WRAPPER}} .swiper-container-wrap .swiper-button-next:hover, {{WRAPPER}} .swiper-container-wrap .swiper-button-prev:hover' => 'background-color: {{VALUE}};',
+					'{{WRAPPER}} .elementor-swiper-button-next:hover, {{WRAPPER}} .elementor-swiper-button-prev:hover' => 'background-color: {{VALUE}};',
 				),
 			)
 		);
@@ -2562,7 +2562,7 @@ class Team_Member_Carousel extends Powerpack_Widget {
 				'type'      => Controls_Manager::COLOR,
 				'default'   => '',
 				'selectors' => array(
-					'{{WRAPPER}} .swiper-container-wrap .swiper-button-next:hover, {{WRAPPER}} .swiper-container-wrap .swiper-button-prev:hover' => 'color: {{VALUE}};',
+					'{{WRAPPER}} .elementor-swiper-button-next:hover, {{WRAPPER}} .elementor-swiper-button-prev:hover' => 'color: {{VALUE}};',
 				),
 			)
 		);
@@ -2574,7 +2574,7 @@ class Team_Member_Carousel extends Powerpack_Widget {
 				'type'      => Controls_Manager::COLOR,
 				'default'   => '',
 				'selectors' => array(
-					'{{WRAPPER}} .swiper-container-wrap .swiper-button-next:hover, {{WRAPPER}} .swiper-container-wrap .swiper-button-prev:hover' => 'border-color: {{VALUE}};',
+					'{{WRAPPER}} .elementor-swiper-button-next:hover, {{WRAPPER}} .elementor-swiper-button-prev:hover' => 'border-color: {{VALUE}};',
 				),
 			)
 		);
@@ -2590,7 +2590,7 @@ class Team_Member_Carousel extends Powerpack_Widget {
 				'type'       => Controls_Manager::DIMENSIONS,
 				'size_units' => array( 'px', '%' ),
 				'selectors'  => array(
-					'{{WRAPPER}} .swiper-container-wrap .swiper-button-next, {{WRAPPER}} .swiper-container-wrap .swiper-button-prev' => 'padding: {{TOP}}{{UNIT}} {{RIGHT}}{{UNIT}} {{BOTTOM}}{{UNIT}} {{LEFT}}{{UNIT}};',
+					'{{WRAPPER}} .elementor-swiper-button-next, {{WRAPPER}} .elementor-swiper-button-prev' => 'padding: {{TOP}}{{UNIT}} {{RIGHT}}{{UNIT}} {{BOTTOM}}{{UNIT}} {{LEFT}}{{UNIT}};',
 				),
 				'separator'  => 'before',
 			)
@@ -2879,19 +2879,18 @@ class Team_Member_Carousel extends Powerpack_Widget {
 		$settings = $this->get_settings_for_display();
 		$image    = $this->get_settings( 'member_image' );
 
-		$this->add_render_attribute( 'team-member-carousel-wrap', 'class', [
-			'swiper-container-wrap',
-			//'swiper',
-		] );
+		$this->add_render_attribute( 'team-member-carousel-wrap', 'class', 'swiper-container-wrap' );
 
 		if ( $settings['dots_position'] ) {
 			$this->add_render_attribute( 'team-member-carousel-wrap', 'class', 'swiper-container-wrap-dots-' . $settings['dots_position'] );
 		}
 
+		$swiper_class = \Elementor\Plugin::$instance->experiments->is_feature_active( 'e_swiper_latest' ) ? 'swiper' : 'swiper-container';
+
 		$this->add_render_attribute(
 			'team-member-carousel',
 			array(
-				'class' => array( 'pp-tm-wrapper', 'pp-tm-carousel', 'pp-swiper-slider', 'swiper-container' ),
+				'class' => array( 'pp-tm-wrapper', 'pp-tm-carousel', 'pp-swiper-slider', $swiper_class ),
 				'id'    => 'swiper-container-' . esc_attr( $this->get_id() ),
 			)
 		);
@@ -3407,10 +3406,10 @@ class Team_Member_Carousel extends Powerpack_Widget {
 							var pp_prev_arrow = 'fa fa-angle-left';
 						}
 						#>
-						<div class="pp-slider-arrow swiper-button-next">
+						<div class="pp-slider-arrow elementor-swiper-button-next">
 							<i class="{{ pp_next_arrow }}"></i>
 						</div>
-						<div class="pp-slider-arrow swiper-button-prev">
+						<div class="pp-slider-arrow elementor-swiper-button-prev">
 							<i class="{{ pp_prev_arrow }}"></i>
 						</div>
 						<#
@@ -3421,16 +3420,19 @@ class Team_Member_Carousel extends Powerpack_Widget {
 			view.addRenderAttribute(
 				'container',
 				{
-					'class': [ 'swiper-container', 'pp-tm-wrapper', 'pp-tm-carousel', 'pp-swiper-slider' ],
+					'class': [
+						'pp-tm-wrapper',
+						'pp-tm-carousel',
+						'pp-swiper-slider',
+						elementorFrontend.config.swiperClass
+					],
 				}
 			);
 
 			if ( settings.direction == 'auto' ) {
-				#>
-				<?php if ( is_rtl() ) { ?>
-					<# view.addRenderAttribute( 'container', 'dir', 'rtl' ); #>
-				<?php } ?>
-				<#
+				var direction = elementorFrontend.config.is_rtl ? 'rtl' : 'ltr';
+
+				view.addRenderAttribute( 'container', 'dir', direction );
 			} else {
 				if ( settings.direction == 'right' ) {
 					view.addRenderAttribute( 'container', 'dir', 'rtl' );
@@ -3441,7 +3443,7 @@ class Team_Member_Carousel extends Powerpack_Widget {
 
 			view.addRenderAttribute( 'container', 'data-slider-settings', JSON.stringify( slider_options ) );
 		#>
-		<div class="swiper-container-wrap swiper swiper-container-wrap-dots-{{ settings.dots_position }}">
+		<div class="swiper-container-wrap swiper-container-wrap-dots-{{ settings.dots_position }}">
 			<div {{{ view.getRenderAttributeString( 'container' ) }}}>
 				<div class="swiper-wrapper">
 					<# _.each( settings.team_member_details, function( item ) { #>
